--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,6 +15,18 @@ body{
     font-weight: 700;
     color: white;
 }
+.section-title{
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color:  #757575;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 18px;
+}
 /* nav related styles  */
 nav{
     display: flex;
@@ -41,14 +53,37 @@ nav a{
 }
 /* header related styles */
 .header{
-    background-color:#FFF8F3;;
+    background-color:#FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 .banner .profile-pic{
     width: 500px;
+}
+.banner-greeting{
+    color: #474747;
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.banner-title{
+    color:  #181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+/* main section styles starts here  */
+/* about section styles starts here  */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0px;
 }
