--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -80,10 +80,21 @@ nav a{
     margin-bottom: 20px;
 }
 /* main section styles starts here  */
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
 /* about section styles starts here  */
 .about{
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
