--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,6 +27,12 @@ body{
     font-family: Open Sans;
     font-size: 18px;
 }
+main section{
+    margin-top: 130px;
+}
+#btn{
+    text-align: center;
+}
 /* nav related styles  */
 nav{
     display: flex;
@@ -98,6 +104,45 @@ main{
 .about-info{
     text-align: center;
 }
+/* what i do section styles starts here  */
 #what-i-do-description{
     padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-description{
+    color: #757575;
+}
+
+.skill{
+    padding: 30px 33px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+/* resume styles starts here */
+.resume{
+    background: #FFF;
+}
+.resume-container{
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+.resume-item-subtitle{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+.resume-item-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
 }
