--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,3 +156,29 @@ main{
     text-align: center;
     margin-top: 50px;
 }
+/* footer styles starts here  */
+footer{
+    background: #FFF8F3;
+    display: flex;
+    gap: 117px;
+    align-items: center;
+    margin-top: 100px;
+    padding: 130px 230px 149px 230px;
+}
+.footer-description{
+    color:  #474747;
+    font-size: 16px;
+    font-weight: 400;
+}
+.from-name, .form-email{
+    width: 461px;
+    height: 64px;
+    border-radius: 5px;
+    background:  #FFF;
+}
+.form-textarea{
+    width: 461px;
+    height: 180px;
+    border-radius: 5px;
+    background:  #FFF;
+}
