--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -165,20 +165,34 @@ footer{
     margin-top: 100px;
     padding: 130px 230px 149px 230px;
 }
+.footer-title{
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+}
+.footer-column{
+    width: 50%;
+}
 .footer-description{
     color:  #474747;
     font-size: 16px;
     font-weight: 400;
 }
-.from-name, .form-email{
+.contact-form input, textarea{
+    display: block;
+    margin-bottom: 24px;
     width: 461px;
-    height: 64px;
+    border: 0px;
     border-radius: 5px;
-    background:  #FFF;
+    background: #FFF;
 }
-.form-textarea{
-    width: 461px;
+.contact-form input{
+    height: 64px;
+}
+.contact-form textarea{
     height: 180px;
-    border-radius: 5px;
-    background:  #FFF;
+}
+.social-links a{
+    margin-right: 24px;
+    font-size: 25px;
 }
