--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -60,9 +60,10 @@ nav a{
 /* header related styles */
 .header{
     background-color:#FFF8F3;
-    background-image: url(../images/header_bg.png);
+    background-image: url('../images/header_bg.png'),url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, left ;
+    height: 830px;
 }
 .banner{
     padding: 30px 30px 0px 150px;
@@ -71,7 +72,8 @@ nav a{
     align-items: center;
 }
 .banner .profile-pic{
-    width: 500px;
+    width: 650px;
+    height: 656px;
 }
 .banner-greeting{
     color: #474747;
